styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Domine', serif;
    font-size: 16px;
}

main {
    padding: 0 1.2em 0 2.2em;
}

section > header, nav > header, h3, h4 {
    font-family: 'Archivo', sans-serif;
}

section > header, h3 {
    margin: .5em 0 1em;
    font-size: 1.4em;
}

h4 {
   font-size: 2em;
   margin: .4em 0;
   color: gray;
   font-style: italic; 
}

nav {        
    border-bottom: 1px solid #ececec;
    background-color: #f7f7f7;
}

nav > header {
    font-size: 1.8em;
    text-align: center;
    margin-bottom: 1em;
    text-transform: uppercase;
    padding-top: 1em;
    padding-bottom: .6em;
}

nav > ul {
    width: 60%;
    margin: 0 auto;
}

a {
    color: #1a1a1a;
}

a:hover {
    color:#6d6d6d;
}

p, ol > li {
    line-height: 1.6em;
    font-size: 1.2em;
    vertical-align: baseline;
    margin: 0 0 1.5em;
}

ol {
    margin-left: 3.2em;
}

pre {
    font-family: 'Source Sans Pro', sans-serif;
    background: #e0ffff75;
    padding: 1em;
    font-size: 1.2em;
    margin-bottom: 1.5em;    
}   

ul {
    list-style-type: none;
    margin: 0;    
    padding: 0;
}

ul > li a {
    display: block;
    padding: .5em .5em;
    text-decoration: none;
}

table, tr, td {
    border-collapse: collapse;
    border: 1px solid gray;
}

table {
    margin-bottom: 3em;
}

td, th {
    padding: 1em;
}

th {
    font-style: italic;
    font-weight: 400;
}

/*code colors*/

.blueish {
    color: #00009e;
}
.redish {
    color: darkred;
}
.greenish {
    color: #5c8c14;
}
.brownish {
    color: #b77621
}
.gray {
    color: gray;
}

@media screen and (min-width: 880px) {
    body {
        margin-top: 4em;
    }
    
    nav {
        float: left;
        width: 30%;
        position: fixed;
        top: 0;
        border-right: 1px solid #ececec;
        background-color: #f7f7f7;
        height: 100vh;
        padding-top: 3em;
    }

    nav > ul {
        width: auto;
        margin: 0;
    }
    
    nav > ul > li {
        padding: 1em 0;
    }

    nav > ul > li > a {
        padding-left: 10%;
    }

    main {
        float: right;
        width: 70%;
    }

    p, ol > li {
        line-height: 1.8em;
        font-size: 1.4em;
    }

    section > header, h3 {
        font-size: 2.8rem;
    }

    pre {
        font-size: 1.2em;
    }
}

